--- a/config/database.yml
+++ b/config/database.yml
@@ -18,6 +18,8 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: dev
+  password: <%= ENV['TASUKE_DATABASE_PASSWORD'] %>
 
 development:
   <<: *default
@@ -80,5 +82,3 @@ test:
 production:
   <<: *default
   database: tasuke_production
-  username: tasuke
-  password: <%= ENV["TASUKE_DATABASE_PASSWORD"] %>
