--- a/test/fixtures/reminders.yml
+++ b/test/fixtures/reminders.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  url: MyString
-  page_number: 1
-  last_read: 2024-03-29 06:37:25
+  url: "www.otaku.com/dbz"
+  page_number: 5
+  last_read: 2024-03-30 06:37:25
 
 two:
-  url: MyString
-  page_number: 1
+  url: "www.manga.com/sakura"
+  page_number: 18
   last_read: 2024-03-29 06:37:25
